# cosc169_robotics

./: README.md
hw1_pack/: CMakeLists.txt  README.md  Record_TravelDistance .csv  package.xml
hw1_pack/launch/: hw1_task2.launch
hw1_pack/scripts/: .hw1_task3.py.swp  hw1_task1.py  hw1_task3.py
hw2_pack/: CMakeLists.txt  README.md  package.xml
hw2_pack/launch/: depth_scan.launch  kalman_filter.launch
hw2_pack/scripts/: initial_node.py  kalman_filter.py
hw3_pack/: CMakeLists.txt  README.md  package.xml
hw3_pack/g20_file_second_version/: graph_init.g2o  graph_opt.g2o
hw3_pack/g2o_file_first_version/: graph_opt.g2o
hw3_pack/launch/: hw3_pack.launch
hw3_pack/scripts/: graph_opt.py
